tests/script_errors/unfinished_escape_eof/error.txt
Error: 
    1 | let test = 
      |              ^ An unexpected end of stream was found